gccida/g3/record_address_regs
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2429:35: error: must use 'enum' tag to refer to type 'reg_class'
void  record_address_regs( rtx x, reg_class a2, int scale) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2491:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v37 = ( unsigned __int16 *)v4[1]; 
                           ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2521:12: error: expected ';' after expression
v4 = ( rtx)v37; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2537:12: error: expected ';' after expression
v4 = ( rtx)v37; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2547:12: error: expected ';' after expression
v4 = ( rtx)v37; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2573:28: error: expected ')'
record_address_regs( ( rtx)v37, GENERAL_REGS, scale); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2573:20: note: to match this '('
record_address_regs( ( rtx)v37, GENERAL_REGS, scale); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2574:12: error: expected ';' after expression
v4 = ( rtx)v37; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2594:14: error: expected expression
v4 = *( rtx *)( *( _QWORD *)&v4[1] + 16LL); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2598:19: error: use of undeclared identifier 'costs_0'; did you mean 'costs'?
v7 = ( __m128i *)&costs_0[v4->fld[0].rtuint]; 
                  ^~~~~~~
                  costs
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:861:22: note: 'costs' declared here
static struct costs *costs;
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2599:31: error: use of undeclared identifier 'machine_mode'
v8 = ix86_memory_move_cost( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), ( reg_class)v3, 1); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2599:90: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
v8 = ix86_memory_move_cost( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), ( reg_class)v3, 1); 
                                                                                         ^~~~~~~~~
                                                                                         regclass
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:1182:1: note: 'regclass' declared here
regclass (f, nregs, dump)
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2603:6: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v7[6].m128i_i32[1] += scale * v8 / 2; 
~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2658:6: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v7[6].m128i_i32[0] += may_move_in_cost[0][24][v12] * scale / 2; 
~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2670:42: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
record_address_regs( v4->fld[v34].rtx, ( reg_class)v3, scale); 
                                         ^~~~~~~~~
                                         regclass
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:1182:1: note: 'regclass' declared here
regclass (f, nregs, dump)
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2670:52: error: expected ')'
record_address_regs( v4->fld[v34].rtx, ( reg_class)v3, scale); 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/regclass.c:2670:20: note: to match this '('
record_address_regs( v4->fld[v34].rtx, ( reg_class)v3, scale); 
                   ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/record_address_regs/src/obj/regclass.o] Error 1
